--- a/.gitignore
+++ b/.gitignore
@@ -122,47 +122,43 @@ dmypy.json
 # VS Code
 .vscode/
 
-# Next.js
-.next/
-out/
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnp/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
 .pnp.js
-.eslintcache
-.stylelintcache
+.yarn/install-state.gz
 
-# Next.js build output
-.next/
-out/
+# testing
+/coverage
 
-# Next.js static files
-public/static/
+# next.js
+/.next/
+/out/
 
-# Next.js environment variables
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# production
+/build
 
-# Next.js log files
-logs/
-*.log
+# misc
+.DS_Store
+*.pem
+
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Next.js lock files
-package-lock.json
-yarn.lock
+# local env files
+.env*.local
 
-# Next.js editor settings
-.idea/
-.vscode/
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
