--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,15 +19,13 @@ services:
     container_name: frontend
     ports:
       - "3000:3000"
-    volumes:
-      - ./frontend:/app
     environment:
       - NEXT_PUBLIC_API_URL=http://backend:8000
     depends_on:
       - backend
 
   db:
-    image: postgres:15
+    image: postgres:16.4-alpine3.20
     container_name: postgres_db
     environment:
       POSTGRES_USER: postgres
