update the database to use sqlite in memory db

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "This is a package that simulates the game of pocker"
 authors = ["Nahom Amare"]
 readme = "README.md"
-
+package-mode = false
 [tool.poetry.dependencies]
 python = "^3.12"
 fastapi = "^0.114.0"
