--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "dev:turbo": "next dev --turbo"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-slot": "^1.1.0",
