--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.441.0",
     "next": "14.2.9",
     "react": "^18",
